# naivecnn

./: .gitignore  LICENSE  README.rst
cnn/: CMakeLists.txt
cnn/cmake/: Eigen.cmake  EnableCXX11.cmake
cnn/core/: CMakeLists.txt
cnn/core/layers/: CMakeLists.txt  convolve.h  padding.h  pool.h  sigmoid.h  softmax.h
cnn/core/layers/tests/: CMakeLists.txt  test_padding.cpp  test_padding.h
cnn/core/maths/: CMakeLists.txt  distributions.cpp  distributions.h
cnn/core/model/: CMakeLists.txt  cnn.cpp  cnn.h
cnn/core/tensor/: CMakeLists.txt  tensor.h
cnn/core/tensor/tests/: CMakeLists.txt  test_tensor.cpp  test_tensor.h
cnn/data/: README.rst
cnn/examples/: CMakeLists.txt
cnn/examples/cifar10/: CMakeLists.txt  cifar10.cpp  cifar10.hpp  cifar10_cnn.cpp
cnn/models/: CMakeLists.txt
docs/: README.rst
